--- a/src/PagesCSS/Home.css
+++ b/src/PagesCSS/Home.css
@@ -15,7 +15,7 @@
   font-style: oblique;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-align: center;
-  /* border-radius: 10px; */
+  border-radius: 10px;
   width: 18rem;
   margin-top: 3rem;
   margin-left: 39rem;
